Fix alignment of loading text in explorer

--- a/src/h5web/explorer/Explorer.module.css
+++ b/src/h5web/explorer/Explorer.module.css
@@ -48,3 +48,7 @@
   margin-left: -0.375rem;
   margin-right: 0.125rem;
 }
+
+.loading {
+  padding: 0.25rem 1rem;
+}
